tests/negative/typechecker_bad10.sp
(* Incorrect type in if condition *)

find_largest:String (a:String, b:String) {
  if a > b {
    return a;
  }
  return b;
}

main: Int () {
    return 0;
}